fix styling overlap

--- a/input.scss
+++ b/input.scss
@@ -8,7 +8,7 @@ $rem-tiny: 0.1rem;
 $trans-white: rgba(223, 223, 223, 0.3);
 $trans-gray: hsla(0, 0%, 50%, 0.30);
 $trans-black: hsla(0, 0%, 0%, 0.3);
-$drop-shadow: drop-shadow(0 0.2rem 0.3rem $trans-gray);
+$drop-shadow: drop-shadow(0 0.3rem 0.5rem $trans-gray);
 $invalid: $rem-tiny solid red;
 
 html, body {
@@ -52,7 +52,6 @@ form {
         flex-wrap: wrap;
         padding: $rem-small $rem-medium $rem-medium;
         background-color: #fff;
-        outline: $rem-tiny solid $trans-white;
         filter: $drop-shadow;
 
         p {
@@ -124,6 +123,7 @@ button:hover, a:hover {
         justify-content: center;
         gap: $rem-small;
         background-color: $trans-black;
+        padding: 0 $rem-medium;
     }
 }
 
