--- a/output.css
+++ b/output.css
@@ -37,8 +37,7 @@ form section {
   flex-wrap: wrap;
   padding: 0.5rem 2rem 2rem;
   background-color: #fff;
-  outline: 0.1rem solid rgba(223, 223, 223, 0.3);
-  filter: drop-shadow(0 0.2rem 0.3rem hsla(0deg, 0%, 50%, 0.3));
+  filter: drop-shadow(0 0.3rem 0.5rem hsla(0deg, 0%, 50%, 0.3));
 }
 form section p {
   width: 100%;
@@ -63,7 +62,7 @@ form button {
   padding: 0.5rem 4rem;
   border-radius: 0.5rem;
   cursor: pointer;
-  filter: drop-shadow(0 0.2rem 0.3rem hsla(0deg, 0%, 50%, 0.3));
+  filter: drop-shadow(0 0.3rem 0.5rem hsla(0deg, 0%, 50%, 0.3));
 }
 form a {
   color: hsl(203deg, 37%, 27%);
@@ -99,6 +98,7 @@ button:hover, a:hover {
   justify-content: center;
   gap: 0.5rem;
   background-color: hsla(0deg, 0%, 0%, 0.3);
+  padding: 0 2rem;
 }
 
 .invalid {
